--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -2,7 +2,7 @@
   font-family: 'Rubik', sans-serif;
   text-align: center;
   position: absolute;
-  bottom: -150px;
+  padding-top: 50px;
   height: 100px;
   width: 100%;
   overflow: hidden;
