--- a/src/assets/css/Images.css
+++ b/src/assets/css/Images.css
@@ -15,6 +15,12 @@ iframe {
 }
 
 /* Imagine sizing */
+img.xxsmall {
+    width: 100%;
+    height: auto;
+    max-width: 35px;
+    padding: 5px;
+}
 img.xsmall {
     width: 100%;
     height: auto;
