--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -5,6 +5,9 @@
 .header-logo {
   padding: 0px !important;
   margin: 0px !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .header-logo:hover {
