--- a/src/assets/css/Timeline.css
+++ b/src/assets/css/Timeline.css
@@ -47,6 +47,7 @@
     left: 2em;
     width: 1em;
     height: 1em;
+    z-index: 3;
 }
 
 .tl-body {
@@ -63,20 +64,20 @@
 .tl-body:hover {
     outline: 0px solid transparent;
     border-right: 5px solid white;
+    background-image: linear-gradient(to right, black , #4b4b4b);
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
+    z-index: 1;
 }
 
-
 .tl-date {
+    position: relative;
     color: white;
-    background-color: black;
-    box-shadow: inset 0 0 0 0em #ef795a;
     display: inline-block;
-   
+    z-index: 2;
     padding: 0.25em 1em 0.2em 4.2em;
 }
 
 .tl-description { 
-    padding-bottom: 1.2em;
+    padding-bottom: 0.5em;
 }
