--- a/src/assets/css/Align.css
+++ b/src/assets/css/Align.css
@@ -1,32 +1,49 @@
-/* Alignment CSS contains styles such as margins, 
-   padding, width, containers, and positioning. */
-/* -------------------------------------------- */
 
-
-/* Main alignment (for footer?) */
+  
+   /* ---------------------------------------------- */
+  /* Alignment CSS contains styles such as margins, */
+ /*  padding, width, containers, and positioning.  */
+/* ---------------------------------------------- */
 html {
     position: relative;
     min-height: 100%;
     background: black;
     color: white;
   }
-  
-  body {
+/* Browser has default 8px around body */
+body {
     margin: 0 0 20px;
-    padding: 0;
-  }
-  
+    /* position: relative;
+    min-height: 100vh;
+    padding-bottom: 2.5rem;    Footer height */
+}  
 
 /* 
-* Responsive Containers and Widths
+* Responsive Containers
 */
 /* Large */
 @media screen and (min-width: 1181px) {
     .wrapper {
         /* For outer div holding the body */
         margin: 0 auto;
-        width: 80%;
-        padding: 0 0 0 0;
+        width: 75%;
+        padding: 2% 0 0 0;
+    }
+
+    .wrapper-w-img {
+        padding: 0 5% 0 7%; 
+      }
+
+    .top-wrapper {
+        margin: 0 auto;
+        width: 100%;
+        padding: 3% 0 0 0;
+    }
+
+    .xl-container {
+        margin: auto;
+        width: 85%;
+        padding: 1%;
     }
 
     .l-container {
@@ -52,8 +69,24 @@ html {
 @media screen and (min-width: 561px) and (max-width: 1180px) {
     .wrapper {
         margin: 0 auto;
-        width: 70%;
-        padding: 0 0 0 0;
+        width: 80%;
+        padding: 2% 0 0 0;
+    }
+
+    .wrapper-w-img {
+        padding: 0 1% 0 1%; 
+      }
+
+    .top-wrapper {
+        margin: 0 auto;
+        width: 100%;
+        padding: 7.5% 0 0 0;
+    }
+
+    .xl-container {
+        margin: auto;
+        width: 95%;
+        padding: 1%;
     }
 
     .l-container {
@@ -76,11 +109,27 @@ html {
 }
 
 /* Small */
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 560px) {
     .wrapper {
         margin: 0 auto;
         width: 90%;
-        padding: 0 0 0 0;
+        padding: 2% 0 0 0;
+    }
+
+    .wrapper-w-img {
+        padding: 0 1% 0 1%; 
+      }
+
+    .top-wrapper {
+        margin: 0 auto;
+        width: 100%;
+        padding: 15% 0 0 0;
+    }
+
+    .xl-container {
+        margin: auto;
+        width: 95%;
+        padding: 1%;
     }
 
     .l-container {
@@ -102,13 +151,17 @@ html {
     }
 }
 
-@media screen and (max-width: 700px) {
+
+/* 
+* Responsive Width
+*/
+@media screen and (max-width: 900px) {
     .s-width {
         width: 90% !important;
     }
 
     .m-width {
-        width: 90% !important;
+        width: 100% !important;
     }
 
     .l-width {
@@ -116,7 +169,7 @@ html {
     }
 }
 
-@media screen and (min-width: 701px) {
+@media screen and (min-width: 901px) {
     .s-width {
         width: 25% !important;
     }
@@ -132,7 +185,7 @@ html {
 
 
 /*
-* Positioning
+* Floating
 */
 .center {
     display: block;
@@ -151,7 +204,9 @@ html {
     float: left;
 }
 
-/* Position attribute added */
+/* 
+* Positioning
+*/
 .p-container {
     position: relative;
 }
@@ -196,6 +251,15 @@ html {
     text-align: center;
 }
 
+.p-center-center {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
 
 /* 
 * Padding
@@ -208,8 +272,25 @@ html {
     padding: 0 1% 0 0;
 }
 
+.s-padding-l {
+    padding: 0 0 0 1%;
+}
+
+.s-padding-r-l {
+    padding: 0 1% 0 1%;
+}
+
+.s-padding-b-r-l {
+    padding: 0 1% 1% 1%;
+}
+
+
 .l-padding-r {
     padding: 0 10% 0 0;
+}
+
+.s-padding-t {
+    padding: 1% 0 0 0;
 }
 
 .s-padding-b {
@@ -218,6 +299,10 @@ html {
 
 .m-padding-t {
     padding: 5% 0 0 0;
+}
+
+.m-padding-b {
+    padding: 0 0 5% 0;
 }
 
 .m-padding-r-l {
@@ -236,6 +321,10 @@ html {
     padding: 1%;
 }
 
+.s-padding-t-b {
+    padding: 1% 0 1% 0;
+}
+
 .m-padding {
     padding: 5%;
 }
@@ -244,49 +333,100 @@ html {
     padding: 10%;
 }
 
+.l-padding-b {
+    padding: 0 0 10% 0;
+}
+
 
 /* 
 *  Margin
 */
-  
 .no-margin {
     margin: 0px !important;
+}
+
+.xs-margin-t {
+    margin: 0.5% 0% 0% 0%;
+}
+
+.xs-margin-t-b {
+    margin: 0.5% 0% 0.5% 0%;
 }
 
 .s-margin {
     margin: 1%;
 }
 
-.m-margin {
-    margin: 5%;
+.s-margin-t {
+    margin: 1% 0% 0% 0%;
 }
 
-.l-margin {
-    margin: 10%;
+.s-margin-r-l {
+    margin: 0 1% 0 1%;
 }
 
-.m-margin-t {
-    margin: 5% 0 0 0;
+.s-margin-r {
+    margin: 0 1% 0 0;
+}
+
+.s-margin-l {
+    margin: 0 0 0 1%;
+}
+
+.s-margin-b { 
+    margin: 0 0 1% 0;
 }
 
 .s-margin-t-b {
     margin: 1% 0% 1% 0%;
 }
 
+.m-margin {
+    margin: 5%;
+}
+
+.m-margin-t {
+    margin: 5% 0 0 0;
+}
+
+.m-margin-b {
+    margin: 0 0 5% 0;
+}
+
+.m-margin-t-b {
+    margin: 5% 0% 5% 0%;
+}
+
+.l-margin {
+    margin: 10%;
+}
+
+.l-margin-b {
+    margin: 0 0 10% 0;
+}
+
 .l-margin-r {
     margin: 0 15% 0% 0% !important;
+}
+
+.margin-auto {
+    margin: auto !important;
 }
 
 /*
 * Misc 
 */
-
-.inline {
-    display: inline; 
-}
-
 .horiz-center {
     margin: 0 auto;
 }
 
+.box-text-v-align {
+    display: flex;
+    align-items:center;
+ }
+
+ 
+
+
+ 
   
