--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -4,28 +4,22 @@
 
 .header-logo {
   padding: 0px !important;
-  margin: 0px !important;
+  margin: 10px 0 0 0 !important;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 5vw;
 }
 
 .header-logo:hover {
   text-decoration: underline;
 }
 
-/* Large */
-@media screen and (min-width: 701px) {
-  .header-logo {
-    font-size: 6vw;
-  }
-}
-
 
 /* Small */
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 900px) {
   .header-logo {
-    font-size: 9vw;
+    font-size: 7.5vw;
   }
 }
 
